--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
       <section class="page-header">
-      <h1 class="project-name">UNITED DIGITAL SPACE PAN ASIA CHANNEL</h1>
+      <h1 class="project-name">UNITED DIGITAL SPACE CHANNEL</h1>
       <h2 class="project-tagline"></h2>
-      <a href="http://uds.asia" class="btn">UNITED DIGITAL SPACE REGION STORE</a>
-      <a href="http://wikiasia.uds.pw" class="btn">UNITED DIGITAL SPACE REGION TOOLS</a>
-      <a href="http://ecosystem.zohosites.com/" class="btn">UNITED DIGITAL SPACE REGION BANKING</a>
+      <a href="http://uds.asia" class="btn">UNITED DIGITAL SPACE STORE</a>
+      <a href="http://wikiasia.uds.pw" class="btn">UNITED DIGITAL SPACE TOOLS</a>
+      <a href="http://ecosystem.zohosites.com/" class="btn">UNITED DIGITAL SPACE BANKING</a>
       
     </section>
     <iframe frameborder='0' scrolling='auto' src='https://dl.dropboxusercontent.com/u/75483211/data/pay/index.htm'
